--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cohort 19- Homepage</title>
+		<title>Designed by Kunbi<title>
 	</head>
 	<body bgcolor="lightgreen">
 		<h2><i><u>Nursery Poem</u></i></h2>
@@ -25,6 +25,8 @@
 		<h5>Moat Academy</h5>
 		<h6>Moat Academy</h6>
 		<p>W<b><i>e</i></b>lcome</p>
+		
+		<p>You lead me and guide me</p>
 
 	</body>
 
