--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		<p>W<b><i>e</i></b>lcome</p>
 		
 		<p>You lead me and guide me</p>
+		<div style='border: 1px solid black'></div>
+		
 
 	</body>
 
