changes to h5tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</p>
 		<span>Moat Academy for developers</span>
 		<span>Eze goes to school &nbsp; everyday</span>
-		<p>Hello!</p>
+		<p>Hello! Moat Alumni</p>
 		<span>Academy</span>
 		<marquee bgcolor="red" direction="right">Breaking News... NARD calls off strike</marquee>
 		<!--Heading tags example-->
