--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p>W<b><i>e</i></b>lcome</p>
 		
 		<p>You lead me and guide me</p>
-		<div style='border: 1px solid black'></div>
+		<div style='border: 1px solid black'><p>Lily of the Valley</p></div>
 		
 
 	</body>
